--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Game Name</title>
 
+<link href="https://fonts.googleapis.com/css?family=Belleza" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script><link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -16,7 +17,6 @@
 			<div class="row">
 				<div class="col-md-12">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                 </div>
@@ -27,7 +27,7 @@
 
 <div id="background">
 	<main>
-		<div id="centre" class="container">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
 					<h1>
